--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
       <ul class="media">
         <li>Follow Us</li>
         <li>
-          <a href=""> <img src="./images/icons8-facebook-64.png" alt="" /></a>
-          <a href=""> <img src="./images/icons8-twitter-48.png" alt="" /></a>
-          <a href=""> <img src="./images/icons8-instagram-64.png" alt="" /></a>
-          <a href=""> <img src="./images/icons8-linkedin-48.png" alt="" /></a>
+          <a href="">.<img src="./images/icons8-facebook-64.png" alt="" /></a>
+          <a href="">.<img src="./images/icons8-twitter-48.png" alt="" /></a>
+          <a href="">.<img src="./images/icons8-instagram-64.png" alt="" /></a>
+          <a href="">.<img src="./images/icons8-linkedin-48.png" alt="" /></a>
         </li>
       </ul>
     </article>
