--- a/index2.html
+++ b/index2.html
@@ -9,7 +9,9 @@
   </head>
   <body>
     <section class="nav">
+      <div>
       <img src="./images/logo.svg" alt="" id="logo1" />
+    </div>
       <nav>
         <ul>
           <li><a href="#">About</a> </li>
